minio-instance/base/minio-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-api
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: minio
